kubernetes/core-components/lldap/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lldap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lldap
        network/allow-external: "true"
    spec:
      serviceAccountName: lldap
      automountServiceAccountToken: false
      containers:
        - name: lldap
          image: ghcr.io/lldap/lldap
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 17170
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 512Mi
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
