kubernetes/core-components/lldap/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lldap
  ports:
    - port: 17170
      targetPort: 17170
      protocol: TCP
      name: http
