kubernetes/core-components/lldap/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-internal
  routes:
    - match: Host(`lldap.home.lungoo.de`)
      kind: Rule
      services:
        - name: lldap
          port: 17170
